--- a/src/patternfly/components/EmptyState/empty-state.scss
+++ b/src/patternfly/components/EmptyState/empty-state.scss
@@ -55,8 +55,8 @@
   --#{$empty-state}--m-xs__footer--MarginTop: var(--pf-t--global--spacer--md);
 
   // Actions
-  --#{$empty-state}__actions--RowGap: var(--pf-t--global--spacer--xs);
-  --#{$empty-state}__actions--ColumnGap: var(--pf-t--global--spacer--xs);
+  --#{$empty-state}__actions--RowGap: var(--pf-t--global--spacer--sm);
+  --#{$empty-state}__actions--ColumnGap: var(--pf-t--global--spacer--md);
 }
 
 .#{$empty-state} {
@@ -126,6 +126,7 @@
 
 .#{$empty-state}__content {
   max-width: var(--#{$empty-state}__content--MaxWidth);
+  max-width: var(--#{$empty-state}__content--RowGap);
 }
 
 .#{$empty-state}__icon {
