--- a/src/patternfly/components/AboutModalBox/about-modal-box.scss
+++ b/src/patternfly/components/AboutModalBox/about-modal-box.scss
@@ -1,14 +1,12 @@
 // @debug $about-modal-box; // check your variable names located in src/patternfly/sass-utilities/component-namespaces.scss
 
-.#{$about-modal-box} {
+:root {
   // Component variables
   --#{$about-modal-box}--BackgroundImage: none;
-  --#{$about-modal-box}--BackgroundColor: var(--#{$pf-global}--palette--black-1000); // Modal uses a non-standard background color
+  --#{$about-modal-box}--BackgroundColor: var(--pf-t--global--background--color--floating--default);
   --#{$about-modal-box}--BackgroundPosition: bottom right;
-  --#{$about-modal-box}--BackgroundSize--min-width: 200px;
-  --#{$about-modal-box}--BackgroundSize--width: 60%;
-  --#{$about-modal-box}--BackgroundSize--max-width: 600px;
-  --#{$about-modal-box}--BackgroundSize: clamp(var(--#{$about-modal-box}--BackgroundSize--min-width), var(--#{$about-modal-box}--BackgroundSize--width), var(--#{$about-modal-box}--BackgroundSize--max-width));
+  --#{$about-modal-box}--BackgroundSize--width: 100%;
+  --#{$about-modal-box}--BackgroundSize: contain;
   --#{$about-modal-box}--Height: 100%;
   --#{$about-modal-box}--lg--Height: #{pf-size-prem(762px)}; // Height is optimized for the exact height desired
   --#{$about-modal-box}--Width: 100%;
@@ -23,13 +21,13 @@
 
 
   // Brand
-  --#{$about-modal-box}__brand--PaddingTop: var(--#{$pf-global}--spacer--2xl);
-  --#{$about-modal-box}__brand--PaddingRight: var(--#{$pf-global}--spacer--xl);
-  --#{$about-modal-box}__brand--PaddingLeft: var(--#{$pf-global}--spacer--xl);
-  --#{$about-modal-box}__brand--PaddingBottom: var(--#{$pf-global}--spacer--xl);
-  --#{$about-modal-box}__brand--sm--PaddingRight: var(--#{$pf-global}--spacer--3xl);
-  --#{$about-modal-box}__brand--sm--PaddingLeft: var(--#{$pf-global}--spacer--3xl);
-  --#{$about-modal-box}__brand--sm--PaddingBottom: var(--#{$pf-global}--spacer--3xl);
+  --#{$about-modal-box}__brand--PaddingTop: var(--pf-t--global--spacer--2xl);
+  --#{$about-modal-box}__brand--PaddingRight: var(--pf-t--global--spacer--xl);
+  --#{$about-modal-box}__brand--PaddingLeft: var(--pf-t--global--spacer--xl);
+  --#{$about-modal-box}__brand--PaddingBottom: var(--pf-t--global--spacer--xl);
+  --#{$about-modal-box}__brand--sm--PaddingRight: var(--pf-t--global--spacer--3xl);
+  --#{$about-modal-box}__brand--sm--PaddingLeft: var(--pf-t--global--spacer--3xl);
+  --#{$about-modal-box}__brand--sm--PaddingBottom: var(--pf-t--global--spacer--3xl);
 
   @media screen and (min-width: $pf-v5-global--breakpoint--sm) {
     --#{$about-modal-box}__brand--PaddingRight: var(--#{$about-modal-box}__brand--sm--PaddingRight);
@@ -38,12 +36,12 @@
   }
 
   // Close
-  --#{$about-modal-box}__close--ZIndex: var(--#{$pf-global}--ZIndex--2xl);
-  --#{$about-modal-box}__close--PaddingTop: var(--#{$pf-global}--spacer--2xl);
-  --#{$about-modal-box}__close--PaddingRight: var(--#{$pf-global}--spacer--xl);
-  --#{$about-modal-box}__close--PaddingBottom: var(--#{$pf-global}--spacer--xl);
-  --#{$about-modal-box}__close--sm--PaddingBottom: var(--#{$pf-global}--spacer--3xl);
-  --#{$about-modal-box}__close--lg--PaddingRight: var(--#{$pf-global}--spacer--3xl);
+  --#{$about-modal-box}__close--ZIndex: var(--#{$pf-global}--ZIndex--2xl); // TODO zindex token
+  --#{$about-modal-box}__close--PaddingTop: var(--pf-t--global--spacer--2xl);
+  --#{$about-modal-box}__close--PaddingRight: var(--pf-t--global--spacer--xl);
+  --#{$about-modal-box}__close--PaddingBottom: var(--pf-t--global--spacer--xl);
+  --#{$about-modal-box}__close--sm--PaddingBottom: var(--pf-t--global--spacer--3xl);
+  --#{$about-modal-box}__close--lg--PaddingRight: var(--pf-t--global--spacer--3xl);
 
   @media only screen and (min-width: $pf-v5-global--breakpoint--sm) {
     --#{$about-modal-box}__close--PaddingBottom: var(--#{$about-modal-box}__close--sm--PaddingBottom);
@@ -54,23 +52,17 @@
   }
 
   // Close Button
-  --#{$about-modal-box}__close--c-button--Color: var(--#{$pf-global}--Color--100);
-  --#{$about-modal-box}__close--c-button--FontSize: var(--#{$pf-global}--FontSize--xl);
-  --#{$about-modal-box}__close--c-button--BorderRadius: var(--#{$pf-global}--BorderRadius--lg);
-  --#{$about-modal-box}__close--c-button--Width: calc(var(--#{$about-modal-box}__close--c-button--FontSize) * 2); // Height and width are 2x font-size
-  --#{$about-modal-box}__close--c-button--Height: calc(var(--#{$about-modal-box}__close--c-button--FontSize) * 2);
-  --#{$about-modal-box}__close--c-button--BackgroundColor: var(--#{$pf-global}--palette--black-1000); // Close button uses a non-standard background color
-  --#{$about-modal-box}__close--c-button--hover--BackgroundColor: #{rgba($pf-v5-color-black-1000, .4)};
+  --#{$about-modal-box}__close--c-button--FontSize: var(--pf-t--global--icon--size--lg);
 
   // Brand img
   --#{$about-modal-box}__brand-image--Height: #{pf-size-prem(40px)};
 
   // Header
-  --#{$about-modal-box}__header--PaddingRight: var(--#{$pf-global}--spacer--xl);
-  --#{$about-modal-box}__header--PaddingBottom: var(--#{$pf-global}--spacer--sm);
-  --#{$about-modal-box}__header--PaddingLeft: var(--#{$pf-global}--spacer--xl);
-  --#{$about-modal-box}__header--sm--PaddingRight: var(--#{$pf-global}--spacer--3xl);
-  --#{$about-modal-box}__header--sm--PaddingLeft: var(--#{$pf-global}--spacer--3xl);
+  --#{$about-modal-box}__header--PaddingRight: var(--pf-t--global--spacer--xl);
+  --#{$about-modal-box}__header--PaddingBottom: var(--pf-t--global--spacer--sm);
+  --#{$about-modal-box}__header--PaddingLeft: var(--pf-t--global--spacer--xl);
+  --#{$about-modal-box}__header--sm--PaddingRight: var(--pf-t--global--spacer--3xl);
+  --#{$about-modal-box}__header--sm--PaddingLeft: var(--pf-t--global--spacer--3xl);
 
   @media only screen and (min-width: $pf-v5-global--breakpoint--sm) {
     --#{$about-modal-box}__header--PaddingRight: var(--#{$about-modal-box}__header--sm--PaddingRight);
@@ -78,23 +70,24 @@
   }
 
   // Strapline
-  --#{$about-modal-box}__strapline--PaddingTop: var(--#{$pf-global}--spacer--xl);
-  --#{$about-modal-box}__strapline--FontSize: var(--#{$pf-global}--FontSize--sm);
-  --#{$about-modal-box}__strapline--sm--PaddingTop: var(--#{$pf-global}--spacer--2xl);
+  --#{$about-modal-box}__strapline--PaddingTop: var(--pf-t--global--spacer--xl);
+  --#{$about-modal-box}__strapline--FontSize: var(--pf-t--global--font--size--body--sm);
+  --#{$about-modal-box}__strapline--Color: var(--pf-t--global--text--color--subtle);
+  --#{$about-modal-box}__strapline--sm--PaddingTop: var(--pf-t--global--spacer--2xl);
 
   @media only screen and (min-width: $pf-v5-global--breakpoint--sm) {
     --#{$about-modal-box}__strapline--PaddingTop: var(--#{$about-modal-box}__strapline--sm--PaddingTop);
   }
 
   // Content
-  --#{$about-modal-box}__content--MarginTop: var(--#{$pf-global}--spacer--xl);
-  --#{$about-modal-box}__content--MarginRight: var(--#{$pf-global}--spacer--xl);
-  --#{$about-modal-box}__content--MarginBottom: var(--#{$pf-global}--spacer--xl);
-  --#{$about-modal-box}__content--MarginLeft: var(--#{$pf-global}--spacer--xl);
-  --#{$about-modal-box}__content--sm--MarginTop: var(--#{$pf-global}--spacer--2xl);
-  --#{$about-modal-box}__content--sm--MarginRight: var(--#{$pf-global}--spacer--3xl);
-  --#{$about-modal-box}__content--sm--MarginBottom: var(--#{$pf-global}--spacer--2xl);
-  --#{$about-modal-box}__content--sm--MarginLeft: var(--#{$pf-global}--spacer--3xl);
+  --#{$about-modal-box}__content--MarginTop: var(--pf-t--global--spacer--xl);
+  --#{$about-modal-box}__content--MarginRight: var(--pf-t--global--spacer--xl);
+  --#{$about-modal-box}__content--MarginBottom: var(--pf-t--global--spacer--xl);
+  --#{$about-modal-box}__content--MarginLeft: var(--pf-t--global--spacer--xl);
+  --#{$about-modal-box}__content--sm--MarginTop: var(--pf-t--global--spacer--2xl);
+  --#{$about-modal-box}__content--sm--MarginRight: var(--pf-t--global--spacer--3xl);
+  --#{$about-modal-box}__content--sm--MarginBottom: var(--pf-t--global--spacer--2xl);
+  --#{$about-modal-box}__content--sm--MarginLeft: var(--pf-t--global--spacer--3xl);
 
   @media only screen and (min-width: $pf-v5-global--breakpoint--sm) {
     --#{$about-modal-box}__content--MarginTop: var(--#{$about-modal-box}__content--sm--MarginTop);
@@ -102,10 +95,9 @@
     --#{$about-modal-box}__content--MarginBottom: var(--#{$about-modal-box}__content--sm--MarginBottom);
     --#{$about-modal-box}__content--MarginLeft: var(--#{$about-modal-box}__content--sm--MarginLeft);
   }
+}
 
-  // This component always needs to be dark
-  @include pf-v5-t-dark;
-
+.#{$about-modal-box} {
   position: relative;
   display: grid;
   grid-template-areas:
@@ -117,7 +109,7 @@
   height: var(--#{$about-modal-box}--Height);
   overflow-x: hidden;
   overflow-y: auto;
-  background-color: var(--#{$about-modal-box}--BackgroundColor); // Because this component is always dark, set the background color
+  background-color: var(--#{$about-modal-box}--BackgroundColor);
   background-image: var(--#{$about-modal-box}--BackgroundImage);
   background-repeat: no-repeat;
   background-position: var(--#{$about-modal-box}--BackgroundPosition);
@@ -169,6 +161,7 @@
   padding-block-start: var(--#{$about-modal-box}__strapline--PaddingTop);
   margin-block-start: auto;
   font-size: var(--#{$about-modal-box}__strapline--FontSize);
+  color: var(--#{$about-modal-box}__strapline--Color);
 }
 
 // Content
@@ -216,26 +209,6 @@
   // Close button
   // Since this btn is unique to the about modal, use contextual selectors in this specific instance
   .#{$button}.pf-m-plain {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: var(--#{$about-modal-box}__close--c-button--Width);
-    height: var(--#{$about-modal-box}__close--c-button--Height);
-    padding: 0;
     font-size: var(--#{$about-modal-box}__close--c-button--FontSize);
-    color: var(--#{$about-modal-box}__close--c-button--Color);
-    background-color: var(--#{$about-modal-box}__close--c-button--BackgroundColor);
-    border-radius: var(--#{$about-modal-box}__close--c-button--BorderRadius);
-
-    &:hover {
-      --#{$about-modal-box}__close--c-button--BackgroundColor: var(--#{$about-modal-box}__close--c-button--hover--BackgroundColor);
-    }
   }
-}
-
-// stylelint-disable no-invalid-position-at-import-rule
-@import "themes/dark/about-modal-box";
-
-@include pf-v5-theme-dark {
-  @include pf-v5-theme-dark-about-modal-box;
 }
